// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base call function when cookie is accepted 1`] = `
<div>
  <div
    className="Header-root-5"
  >
    <header
      className="MuiPaper-root-21 MuiPaper-elevation4-27 MuiAppBar-root-13 MuiAppBar-positionFixed-14 MuiAppBar-colorPrimary-19 mui-fixed Header-appBar-6 Header-appBarShift-8"
    >
      <div
        className="MuiToolbar-root-48 MuiToolbar-regular-50 MuiToolbar-gutters-49"
      >
        <button
          aria-label="open drawer"
          className="MuiButtonBase-root-58 MuiIconButton-root-52 MuiIconButton-colorInherit-53 Header-menuButton-9 Header-hide-10"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-57"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-68"
          />
        </button>
        <h2
          className="MuiTypography-root-75 MuiTypography-title-81 MuiTypography-colorInherit-94 Header-flex-11 Header-title-12"
          onClick={[Function]}
        >
          Foo
        </h2>
      </div>
    </header>
  </div>
  <div
    className="BaseBranch-appFrame-1"
  >
    <div
      className="MuiDrawer-docked-102"
    >
      <div
        className="MuiPaper-root-21 MuiPaper-elevation0-23 MuiDrawer-paper-103 Drawer-drawerPaper-100 MuiDrawer-paperAnchorLeft-104 MuiDrawer-paperAnchorDockedLeft-108"
        direction="right"
        style={Object {}}
      >
        <div>
          <div
            className="Drawer-drawerHeader-101"
          >
            <button
              className="MuiButtonBase-root-58 MuiIconButton-root-52"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-57"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
          </div>
          <hr
            className="MuiDivider-root-113"
          />
          <div
            className="Menu-root-117"
          >
            <ul
              className="MuiList-root-118 MuiList-padding-119"
            >
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Dashboard
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131 MenuItem-isDisabled-122"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    New portfolio
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <hr
                className="MuiDivider-root-113"
              />
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61 MuiListItemIcon-root-140"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"
                  />
                </svg>
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Report a bug
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <main
      className="BaseBranch-content-3 BaseBranch-contentShift-4"
    >
      <div
        className="CookieInfo-root-141"
      >
        <div
          className="CookieInfo-content-143"
        />
        <button
          className="MuiButtonBase-root-58 MuiButton-root-145 MuiButton-text-147 MuiButton-flat-150 CookieInfo-button-144"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-146"
          >
            Accept
          </span>
          <span
            className="MuiTouchRipple-root-68"
          />
        </button>
      </div>
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={false}
        key=".1"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;

exports[`Base click on menu icon if closed changes state 1`] = `
<div>
  <div
    className="Header-root-5"
  >
    <header
      className="MuiPaper-root-21 MuiPaper-elevation4-27 MuiAppBar-root-13 MuiAppBar-positionFixed-14 MuiAppBar-colorPrimary-19 mui-fixed Header-appBar-6 Header-appBarWithCookieInfo-7"
    >
      <div
        className="MuiToolbar-root-48 MuiToolbar-regular-50 MuiToolbar-gutters-49"
      >
        <button
          aria-label="open drawer"
          className="MuiButtonBase-root-58 MuiIconButton-root-52 MuiIconButton-colorInherit-53 Header-menuButton-9"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-57"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-68"
          />
        </button>
        <h2
          className="MuiTypography-root-75 MuiTypography-title-81 MuiTypography-colorInherit-94 Header-flex-11 Header-title-12"
          onClick={[Function]}
        >
          Foo
        </h2>
      </div>
    </header>
  </div>
  <div
    className="BaseBranch-appFrame-1 BaseBranch-appFrameWithCookieInfo-2"
  >
    <div
      className="MuiDrawer-docked-102"
    >
      <div
        className="MuiPaper-root-21 MuiPaper-elevation0-23 MuiDrawer-paper-103 Drawer-drawerPaper-100 MuiDrawer-paperAnchorLeft-104 MuiDrawer-paperAnchorDockedLeft-108"
        direction="right"
        style={Object {}}
      >
        <div>
          <div
            className="Drawer-drawerHeader-101"
          >
            <button
              className="MuiButtonBase-root-58 MuiIconButton-root-52"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-57"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
          </div>
          <hr
            className="MuiDivider-root-113"
          />
          <div
            className="Menu-root-117"
          >
            <ul
              className="MuiList-root-118 MuiList-padding-119"
            >
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Dashboard
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131 MenuItem-isDisabled-122"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    New portfolio
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <hr
                className="MuiDivider-root-113"
              />
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61 MuiListItemIcon-root-140"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"
                  />
                </svg>
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Report a bug
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <main
      className="BaseBranch-content-3"
    >
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={false}
        key=".0"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;

exports[`Base click on menu icon if open changes state 1`] = `
<div>
  <div
    className="Header-root-5"
  >
    <header
      className="MuiPaper-root-21 MuiPaper-elevation4-27 MuiAppBar-root-13 MuiAppBar-positionFixed-14 MuiAppBar-colorPrimary-19 mui-fixed Header-appBar-6 Header-appBarShift-8 Header-appBarWithCookieInfo-7"
    >
      <div
        className="MuiToolbar-root-48 MuiToolbar-regular-50 MuiToolbar-gutters-49"
      >
        <button
          aria-label="open drawer"
          className="MuiButtonBase-root-58 MuiIconButton-root-52 MuiIconButton-colorInherit-53 Header-menuButton-9 Header-hide-10"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-57"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-68"
          />
        </button>
        <h2
          className="MuiTypography-root-75 MuiTypography-title-81 MuiTypography-colorInherit-94 Header-flex-11 Header-title-12"
          onClick={[Function]}
        >
          Foo
        </h2>
      </div>
    </header>
  </div>
  <div
    className="BaseBranch-appFrame-1 BaseBranch-appFrameWithCookieInfo-2"
  >
    <div
      className="MuiDrawer-docked-102"
    >
      <div
        className="MuiPaper-root-21 MuiPaper-elevation0-23 MuiDrawer-paper-103 Drawer-drawerPaper-100 MuiDrawer-paperAnchorLeft-104 MuiDrawer-paperAnchorDockedLeft-108"
        direction="right"
        style={Object {}}
      >
        <div>
          <div
            className="Drawer-drawerHeader-101"
          >
            <button
              className="MuiButtonBase-root-58 MuiIconButton-root-52"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-57"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
          </div>
          <hr
            className="MuiDivider-root-113"
          />
          <div
            className="Menu-root-117"
          >
            <ul
              className="MuiList-root-118 MuiList-padding-119"
            >
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Dashboard
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131 MenuItem-isDisabled-122"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    New portfolio
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <hr
                className="MuiDivider-root-113"
              />
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61 MuiListItemIcon-root-140"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"
                  />
                </svg>
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Report a bug
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <main
      className="BaseBranch-content-3 BaseBranch-contentShift-4"
    >
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={true}
        key=".0"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;

exports[`Base click on title 1`] = `
<div>
  <div
    className="Header-root-5"
  >
    <header
      className="MuiPaper-root-21 MuiPaper-elevation4-27 MuiAppBar-root-13 MuiAppBar-positionFixed-14 MuiAppBar-colorPrimary-19 mui-fixed Header-appBar-6 Header-appBarShift-8 Header-appBarWithCookieInfo-7"
    >
      <div
        className="MuiToolbar-root-48 MuiToolbar-regular-50 MuiToolbar-gutters-49"
      >
        <button
          aria-label="open drawer"
          className="MuiButtonBase-root-58 MuiIconButton-root-52 MuiIconButton-colorInherit-53 Header-menuButton-9 Header-hide-10"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-57"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-68"
          />
        </button>
        <h2
          className="MuiTypography-root-75 MuiTypography-title-81 MuiTypography-colorInherit-94 Header-flex-11 Header-title-12"
          onClick={[Function]}
        >
          Foo
        </h2>
      </div>
    </header>
  </div>
  <div
    className="BaseBranch-appFrame-1 BaseBranch-appFrameWithCookieInfo-2"
  >
    <div
      className="MuiDrawer-docked-102"
    >
      <div
        className="MuiPaper-root-21 MuiPaper-elevation0-23 MuiDrawer-paper-103 Drawer-drawerPaper-100 MuiDrawer-paperAnchorLeft-104 MuiDrawer-paperAnchorDockedLeft-108"
        direction="right"
        style={Object {}}
      >
        <div>
          <div
            className="Drawer-drawerHeader-101"
          >
            <button
              className="MuiButtonBase-root-58 MuiIconButton-root-52"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-57"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
          </div>
          <hr
            className="MuiDivider-root-113"
          />
          <div
            className="Menu-root-117"
          >
            <ul
              className="MuiList-root-118 MuiList-padding-119"
            >
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Dashboard
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131 MenuItem-isDisabled-122"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    New portfolio
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <hr
                className="MuiDivider-root-113"
              />
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61 MuiListItemIcon-root-140"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"
                  />
                </svg>
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Report a bug
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <main
      className="BaseBranch-content-3 BaseBranch-contentShift-4"
    >
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={true}
        key=".0"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;

exports[`Base renders correctly 1`] = `
<div>
  <div
    className="Header-root-5"
  >
    <header
      className="MuiPaper-root-21 MuiPaper-elevation4-27 MuiAppBar-root-13 MuiAppBar-positionFixed-14 MuiAppBar-colorPrimary-19 mui-fixed Header-appBar-6 Header-appBarShift-8 Header-appBarWithCookieInfo-7"
    >
      <div
        className="MuiToolbar-root-48 MuiToolbar-regular-50 MuiToolbar-gutters-49"
      >
        <button
          aria-label="open drawer"
          className="MuiButtonBase-root-58 MuiIconButton-root-52 MuiIconButton-colorInherit-53 Header-menuButton-9 Header-hide-10"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-57"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-68"
          />
        </button>
        <h2
          className="MuiTypography-root-75 MuiTypography-title-81 MuiTypography-colorInherit-94 Header-flex-11 Header-title-12"
          onClick={[Function]}
        >
          Foo
        </h2>
      </div>
    </header>
  </div>
  <div
    className="BaseBranch-appFrame-1 BaseBranch-appFrameWithCookieInfo-2"
  >
    <div
      className="MuiDrawer-docked-102"
    >
      <div
        className="MuiPaper-root-21 MuiPaper-elevation0-23 MuiDrawer-paper-103 Drawer-drawerPaper-100 MuiDrawer-paperAnchorLeft-104 MuiDrawer-paperAnchorDockedLeft-108"
        direction="right"
        style={Object {}}
      >
        <div>
          <div
            className="Drawer-drawerHeader-101"
          >
            <button
              className="MuiButtonBase-root-58 MuiIconButton-root-52"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-57"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
          </div>
          <hr
            className="MuiDivider-root-113"
          />
          <div
            className="Menu-root-117"
          >
            <ul
              className="MuiList-root-118 MuiList-padding-119"
            >
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Dashboard
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131 MenuItem-isDisabled-122"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    New portfolio
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
              <hr
                className="MuiDivider-root-113"
              />
              <div
                className="MuiButtonBase-root-58 MuiListItem-root-123 MuiListItem-default-126 MuiListItem-gutters-130 MuiListItem-button-131"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-61 MuiListItemIcon-root-140"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"
                  />
                </svg>
                <div
                  className="MuiListItemText-root-134"
                >
                  <span
                    className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-137"
                  >
                    Report a bug
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root-68"
                />
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <main
      className="BaseBranch-content-3 BaseBranch-contentShift-4"
    >
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={true}
        key=".0"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;

exports[`Base renders correctly without header 1`] = `
<div>
  <div
    className="BaseBranch-appFrame-1 BaseBranch-appFrameWithCookieInfo-2"
  >
    <main
      className="BaseBranch-content-3 BaseBranch-contentShift-4"
    >
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={true}
        key=".0"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;

exports[`Base renders with drawer open 1`] = `
<div>
  <div
    className="BaseBranch-appFrame-1 BaseBranch-appFrameWithCookieInfo-2"
  >
    <main
      className="BaseBranch-content-3 BaseBranch-contentShift-4"
    >
      <div
        hasCookieInfo={true}
        history={
          Object {
            "createHref": [Function],
            "path": "",
            "push": [Function],
            "replace": [Function],
          }
        }
        isOpen={true}
        key=".0"
        location=""
        match={
          Object {
            "params": Object {},
            "path": "",
            "url": "",
          }
        }
        menuOpen={true}
        onAccept={[Function]}
      >
        Foo
      </div>
    </main>
  </div>
</div>
`;
